Pushing v238 from API e01cc4e0312b38a1da3ec2fd3c1a16a4a07d3d90

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -25243,6 +25243,10 @@ components:
         - encounter.created
         - encounter.updated
         - encounter.deleted
+        - encounter_type.created
+        - encounter_type.updated
+        - encounter_type.archived
+        - encounter_type.unarchived
         - file.created
         - field.created
         - field.updated
