Pushing v240 from API cdd8cda938f02b92fa928c8237e0b1a1367ac748

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -2764,9 +2764,9 @@ paths:
                               unit:
                                 type: string
                                 enum:
-                                  - days
-                                  - weeks
-                                  - months
+                                  - day
+                                  - week
+                                  - month
                                 description: Units for the time specified in `amount`.
                               amount:
                                 type: number
@@ -2783,11 +2783,11 @@ paths:
                           When the activity should begin running. You can specify either an
                           `absolute` trigger type along with a specific date and time or a
                           `relative` trigger type to indicate a period of time after the start of
-                          the care plan. The relative trigger type supports units of `days`,
-                          `weeks`, and `months`.
+                          the care plan. The relative trigger type supports units of `day`, `week`,
+                          and `month`.
                         example:
                           type: relative
-                          unit: weeks
+                          unit: week
                           amount: 1
                       recurrence:
                         type: object
@@ -17294,9 +17294,9 @@ components:
                       unit:
                         type: string
                         enum:
-                          - days
-                          - weeks
-                          - months
+                          - day
+                          - week
+                          - month
                         description: Units for the time specified in `amount`.
                       amount:
                         type: number
@@ -17314,10 +17314,10 @@ components:
                   When the activity should begin running. You can specify either an `absolute`
                   trigger type along with a specific date and time or a `relative` trigger type to
                   indicate a period of time after the start of the care plan. The relative trigger
-                  type supports units of `days`, `weeks`, and `months`.
+                  type supports units of `day`, `week`, and `month`.
                 example:
                   type: relative
-                  unit: weeks
+                  unit: week
                   amount: 1
               recurrence:
                 type: object
